k8s/landing-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      nodeSelector:
        kubernetes.io/hostname: wk-1
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: landing-page
          image: ghcr.io/igalhub/proxmox-iac-landing:03d16db275a7ce0a1b47d8a24b0555ffdf20baa0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
